# curso_especialista_ia_alura

agent_rh/: main.py  requirements.txt
agent_rh/models/chroma_rh/: chroma.sqlite3
agente_farmaceutico/: sample.ipynb
agente_farmaceutico/models/chroma_bulas/: chroma.sqlite3
futebol_agent_rag/: sample.ipynb
futebol_agent_rag/models/chroma_regras_futebol/455dc8f6-08df-42f0-9b3e-221751f0d2d0/: index_metadata.pickle
hugging-face-explorando-aplicando-solucoes-modelos-ia/: chat_bot.ipynb  faq.ipynb  image_editing.ipynb  product_categorization.ipynb  requirements.txt  sentiment_analysis.ipynb
hugging-face-transferindo-aprendizado-modelos-nlp/: aula_01.ipynb  aula_02.ipynb  aula_03.ipynb  requirements.txt
langchain-rag-avancado/: rag.ipynb  review.ipynb
langgraph_course_beginners/: agent_bot_01.py  agent_bot_02.py  drafter.py  pyproject.toml  rag.py  react_agent.py  requirements.txt
